# sd-bit-geant4

./: CONTRIBUTING.md  LICENSE  README.md
docs/: geant4_guide.md  monte_carlo_guide.md  theory.md
geant4/: CMakeLists.txt  sd_bit.cc
geant4/analysis/: plot_results.py  requirements.txt
geant4/include/: SdBitActionInitialization.hh  SdBitDetectorConstruction.hh  SdBitEventAction.hh  SdBitPhysicsList.hh  SdBitPrimaryGeneratorAction.hh  SdBitRunAction.hh  SdBitSensitiveDetector.hh  SdBitSteppingAction.hh
geant4/macros/: init_vis.mac  run.mac  tritium.mac
geant4/src/: SdBitActionInitialization.cc  SdBitDetectorConstruction.cc  SdBitEventAction.cc  SdBitPhysicsList.cc  SdBitPrimaryGeneratorAction.cc  SdBitRunAction.cc  SdBitSensitiveDetector.cc  SdBitSteppingAction.cc
monte-carlo/: requirements.txt  sd_bit_simulation.py
monte-carlo/examples/: basic_config.json  low_activity_config.json
scripts/: run_parameter_sweep.py  validate_simulations.py
